# cpp-stencil

./: .gitmodules  CMakeLists.txt  README.md
demo/: heat_dissipation_2d.cpp
src/: buffer.hpp  loop.hpp  util.hpp
test/: buffer.cpp  util.cpp
